# Conure2D

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CodeConvention.md  Conure2D.sln  README.md
Src/Core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters
Src/Core/Base/: BaseComponent.cpp  BaseComponent.hpp  SceneObject.cpp  SceneObject.hpp  SceneObject.inl
Src/Core/Components/: BaseComponent.cpp  BaseComponent.hpp  BaseDataComponent.cpp  BaseDataComponent.hpp  BaseLogicComponent.cpp  BaseLogicComponent.hpp  CameraComponent.cpp  CameraComponent.hpp  RenderableComponent.cpp  RenderableComponent.hpp  TransformComponent.cpp  TransformComponent.hpp
Src/Core/Components/Base/: BaseComponent.cpp  BaseComponent.hpp  BaseDataComponent.cpp  BaseDataComponent.hpp  BaseLogicComponent.cpp  BaseLogicComponent.hpp
Src/Core/Components/Utility/: CamerasCompare.cpp  CamerasCompare.hpp  RenderablesCompare.cpp  RenderablesCompare.hpp
Src/Core/Scene/: BaseScene.cpp  BaseScene.hpp  BaseSceneInterface.hpp  RenderableSceneMapInterface.hpp  SceneMap.cpp  SceneMap.hpp  SceneMapSystemInterface.hpp  SceneObject.cpp  SceneObject.hpp  SceneObject.inl
Src/Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  EngineInterface.cpp  EngineInterface.hpp  EngineInterfaceDefinitions.inl
Src/Engine/Main/: EngineApp.cpp  EngineApp.hpp
Src/GLFWWrapper/: CMakeLists.txt  Context.cpp  Context.hpp  Monitor.cpp  Monitor.hpp  VideoMode.cpp  VideoMode.hpp  Window.cpp  Window.hpp
Src/Input/: CMakeLists.txt  DirectInput.cpp  DirectInput.hpp  Input.vcxproj  Input.vcxproj.filters  InputHandler.cpp  InputHandler.hpp  InputSystem.cpp  InputSystem.hpp  InputSystemHandlerInterface.hpp  InputSystemInterface.hpp
Src/Input/Devices/: JoystickDevice.cpp  JoystickDevice.hpp  JoystickDeviceInterface.hpp  KeyboardDevice.cpp  KeyboardDevice.hpp  MouseDevice.cpp  MouseDevice.hpp  MouseDeviceInterface.hpp
Src/Input/Managers/: InputDeviceManager.cpp  InputDeviceManager.hpp  InputMapManager.cpp  InputMapManager.hpp
Src/Input/Utilities/: ButtonStateHandler.cpp  ButtonStateHandler.hpp  InputUtilities.hpp  KeyStateHandler.cpp  KeyStateHandler.hpp
Src/Input/Utilities/Buttons/: JoystickAxes.hpp  JoystickButtons.hpp  KeyboardButtons.hpp  MouseButtons.hpp
Src/Input/Utilities/Keys/: JoystickAxes.hpp  JoystickAxises.hpp  KeyboardKeys.hpp  MouseButtons.hpp
Src/Input/Utilities/MappedInput/: InputAction.cpp  InputAction.hpp  InputAxis.cpp  InputAxis.hpp  InputMap.cpp  InputMap.hpp  InputMapInterface.hpp
Src/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
Src/Render/: CMakeLists.txt  RenderSystem.cpp  RenderSystem.hpp  RenderSystemInterface.hpp  Renderer.vcxproj  TriangleRenderer.cpp  TriangleRenderer.hpp
Src/Render/Components/: SpriteRenderComponent.cpp  SpriteRenderComponent.hpp
Src/Render/Temp/: CMakeLists.txt  RenderSystem.hpp
Src/Render/Temp/Components/: SpriteRenderComponent.hpp
Src/Render/Temp/Window/: Window.hpp  WindowSettings.hpp
Src/Render/Window/: Window.cpp  Window.hpp  WindowSettings.cpp  WindowSettings.hpp
Src/TestApp/: CMakeLists.txt  main.cpp
Src/Tracer/: CMakeLists.txt  TraceScopeTimer.cpp  TraceScopeTimer.hpp
Src/Utility/: Assert.cpp  Assert.hpp  CMakeLists.txt  Time.hpp  Utility.vcxproj  Utility.vcxproj.filters
Src/Utility/Containers/: AnyCallable.hpp  AnyCallable.inl  AnyCallableHandler.cpp  AnyCallableHandler.hpp
Src/Utility/Containers/AnyCallable/: AnyCallable.hpp  AnyCallable.inl  AnyCallableHandler.cpp  AnyCallableHandler.hpp  BadAnyCallableCall.cpp  BadAnyCallableCall.hpp  BadAnyCallableCall.inl
Src/Utility/Containers/LockFreeLinkedQueue/: LockFreeLinkedQueue.cpp  LockFreeLinkedQueue.hpp  LockFreeLinkedQueue.inl  LockFreeLinkedQueueReference.inl
Src/Utility/Containers/LockedQueue/: LockedQueue.hpp  LockedQueue.inl
Src/Utility/Containers/RingBuffer/: RingBuffer.hpp  (+7 more)
Src/Utility/EventSystem/: Dispatcher.hpp  Dispatcher.inl  DispatcherInterface.hpp  EventManager.cpp  EventManager.hpp  EventManager.inl  SimplestDispatcher.cpp  SimplestDispatcher.hpp
Src/Utility/Exception/: ExceptionHandler.hpp
Src/Utility/Helpers/: EnumHelpers.hpp  TypeHelpers.hpp  VariantHelpers.hpp
Src/Utility/IOSystem/: IOSystem.cpp  IOSystem.hpp  IOSystemInterface.hpp
Src/Utility/LogSystem/: LogEntry.cpp  LogEntry.hpp  LogSystem.cpp  LogSystem.hpp  LogUtilities.hpp
Src/Utility/Math/: AtomicVector2.hpp  AtomicVector2.inl  MathConstants.hpp  Vector2.hpp  Vector2.inl  Vector2PrecompiledTemplates.cpp  Vectors.hpp
Src/Utility/Random/: RandomGenerator.cpp  RandomGenerator.hpp  RandomGenerator.inl
Src/Utility/Time/: Time.cpp  Time.hpp  TimeSpan.cpp  TimeSpan.hpp
Src/VkWrapper/: Application.cpp  Application.hpp  CMakeLists.txt  CommandBuffers.cpp  CommandBuffers.hpp  CommandPool.cpp  CommandPool.hpp  Context.cpp  Context.hpp  DebugMessenger.cpp  DebugMessenger.hpp  Extensions.cpp  Extensions.hpp  Fence.cpp  Fence.hpp  Framebuffers.cpp  Framebuffers.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  LDevice.cpp  LDevice.hpp  PDevice.cpp  PDevice.hpp  PipelineShader.cpp  PipelineShader.hpp  QueueFamilyIndices.cpp  QueueFamilyIndices.hpp  RenderPass.cpp  RenderPass.hpp  RenderPipeline.cpp  RenderPipeline.hpp  Semaphore.cpp  Semaphore.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  SuitablePDevice.cpp  SuitablePDevice.hpp  Surface.cpp  (+9 more)
Src/VkWrapper/Memory/: Fence.cpp  Fence.hpp  Semaphore.cpp  Semaphore.hpp
Src/VkWrapper/Renderer/: IRenderMediator.hpp  RenderMediator.cpp  RenderMediator.hpp  Renderer.cpp  Renderer.hpp  TriangleRenderer.cpp  TriangleRenderer.hpp
Src/VkWrapper/Shader/: PipelineShader.cpp  PipelineShader.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp
Src/VkWrapper/Vertex/: Vertex.cpp  Vertex.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferArray.cpp  VertexBufferArray.hpp  VertexManager.cpp  VertexManager.hpp
UnitTests/Utility/: CMakeLists.txt
UnitTests/Utility/Containers/: LockFreeLinkedQueueTest.cpp  LockFreeLinkedQueueTests.cpp  RingBufferTest.cpp  RingBufferTests.cpp
UnitTests/Utility/Math/: Vector2Test.cpp
(+25 files in other folders)
